styles/components/_heroHome.scss
.hero {
	margin-bottom: 0;
	section {
		margin-bottom: 0;
		.container-sm {
			> div {
				div {
					display: flex;
					flex-direction: column;
					align-items: center;
					gap: rem(1);
					margin: 0 auto;
					@media (min-width: $from-small) {
						width: 60%;
					}
					p {
						width: 75%;
						text-align: center;
						@media (min-width: $from-small) {
							width: 75%;
						}
					}
				}
			}
		}
		img {
			margin-top: rem(5);
			margin-bottom: rem(5);
			width: 100%;
			height: auto;
		}
	}
}

